More spelling fixes

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -409,7 +409,7 @@ gerdom.43.c:0 "Support the Catholic Church and invest more in the catholic domin
 
 
 gerdom.47.t:0 "The Death of Wilhelm II"
-gerdom.47.d:0 "Our Kaiser Wilhelm II has died of a pulmonary embolism in the charité hospital in Berlin today. It is the end of an age. Wilhelm II was the last European monarch who reigned during the 19th century, and his whole life he tried to uphold - sometimes succeding, often failing - the values he identified with that era. With his death, the 20th century will, at last, be fully upon us. \n\nAll over the Empire, flags are flying at half-mast, and public ceremonies are being organised to honor the Weltkriegskaiser, the Kaiser who won the world for Germany. One of the onlookers in Berlin is Kronprinz Friedrich Wilhelm, who will now have to uphold the honor of the Kaiserreich in the world."
+gerdom.47.d:0 "Our Kaiser Wilhelm II has died of a pulmonary embolism in the charité hospital in Berlin today. It is the end of an age. Wilhelm II was the last European monarch who reigned during the 19th century, and his whole life he tried to uphold - sometimes succeeding, often failing - the values he identified with that era. With his death, the 20th century will, at last, be fully upon us. \n\nAll over the Empire, flags are flying at half-mast, and public ceremonies are being organised to honour the Weltkriegskaiser, the Kaiser who won the world for Germany. One of the onlookers in Berlin is Kronprinz Friedrich Wilhelm, who will now have to uphold the honour of the Kaiserreich in the world."
 gerdom.47.a:0 "The Kaiser is dead! Long live Kaiser Wilhelm III!"
 
 gerdom.49.t:0 "Reichskanzler Vogel dies"
@@ -565,7 +565,7 @@ gerdom.85.c:0 "Publicly condemn German actions!"
 gerdom.85.e:0 "Do nothing"
 
 gerdom.86.t:0 "International community condemns us!"
-gerdom.86.d:0 "Commune of France used our recent actions aimed against all French organisation within the German Empire to organise a public conference with participation of many neutral countries on which they publicly condemned as they call it ´German Imperialism´ and pledged to do everything to save the French population within the borders of the German Empire. In response, many important members of International community condemned our actions against the French population as well, stating that such actions are slight upon honour of modern state! How shall we react to this public humiliation?"
+gerdom.86.d:0 "Commune of France used our recent actions aimed against all French organisation within the German Empire to organise a public conference with participation of many neutral countries on which they publicly condemned as they call it 'German Imperialism' and pledged to do everything to save the French population within the borders of the German Empire. In response, many important members of International community condemned our actions against the French population as well, stating that such actions are slight upon honour of modern state! How shall we react to this public humiliation?"
 gerdom.86.a:0 "The Communards are behind this, destroy them!"
 gerdom.86.b:0 "Ignore all protests!"
 gerdom.86.c:0 "Restore rights of the French community"
@@ -1065,7 +1065,7 @@ GER_parlamentsvertrauen_tp:0 "Election results will determine governments."
 GER_disband_reichstag_tp:0 "Elections will not be held."
 GER_cult_of_aviation_tp:0 "Our pilots will bring themselves to their very limits."
 GER_DEN_neutralist_pigs:0 "Denmark has refused our aid"
-security_backdown:0 "Security Backdown"
+security_backdown:0 "Security Backs Down"
 
 ### Opinion Modifiers ###
 sri_lanka:0 "Imperialist Bastard"
