--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -26,7 +26,7 @@ JAP_SUN_RISE_desc:0 "With the political problems at home suppressed, it is time 
 JAP_create_riken:0 "Create Rikagaku Kenkyusho"
 JAP_create_riken_desc:0 ""
 JAP_SUN_GERMAN:0 "Bring Down the German Goliath!"
-JAP_SUN_GERMAN_desc:0 "The German Empire stands at the top of the world and occupies lands in Asia exploiting its peoples and threatening our own posessions on the mainland! We must bring down the German Goliath!"
+JAP_SUN_GERMAN_desc:0 "The German Empire stands at the top of the world and occupies lands in Asia exploiting its peoples and threatening our own possessions on the mainland! We must bring down the German Goliath!"
 JAP_SUN_RUSSIA:0 "Operation Kuma"
 JAP_SUN_RUSSIA_desc:0 "To the north of us there is a great untamed land, ripe for the taking. It is a land ruled by warlords, with bandits and criminals sowing chaos amid rich provinces. We must bring order to the north to protect our influence."
 JAP_SUN_COLONY:0 "Colonialism!"
@@ -48,7 +48,7 @@ JAP_SUN_PHIL_invite_desc:0 "Now that the Philippines are independent from wester
 JAP_SUN_PHIL_fold:0 "Bring the Philippines Into the Fold!"
 JAP_SUN_PHIL_fold_desc:0 "Now that the imperialists are out, we can send our gunboats to secure the islands for the Co-Prosperity Sphere!"
 JAP_SUN_HAW_alliance:0 "Alliance with Hawaii?"
-JAP_SUN_HAW_alliance_desc:0 "After the seccession of Hawaii in the wake of the American civil war new opportunities were opened for us in the east. Let us offer an alliance to the Hawaiian government."
+JAP_SUN_HAW_alliance_desc:0 "After the secession of Hawaii in the wake of the American civil war new opportunities were opened for us in the east. Let us offer an alliance to the Hawaiian government."
 JAP_SUN_HAW_annex:0 "Annex Hawaii!"
 JAP_SUN_HAW_annex_desc:0 "Now that the American position in the pacific is weakened we can make our move to annex Hawaii and open a path to the Americas."
 
