--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -248,7 +248,7 @@ USA_farmer_relief:0 "Provide Relief to the Farmers"
 USA_farmer_relief_desc:0 ""
 USA_homestead:0 "Rural Electrification Act"
 USA_homestead_desc:0 ""
-USA_new_trust_busting:0 "National Labor Relations Board"
+USA_new_trust_busting:0 "National Labour Relations Board"
 USA_new_trust_busting_desc:0 ""
 USA_public_works_administration:0 "Create the Public Works Administration"
 USA_public_works_administration_desc:0 ""
@@ -721,7 +721,7 @@ ustates.50.b:0 "Break them the old fashioned way. Send in the Minute Men."
 ustates.50.c:0 "Declare the CSA illegal and arrest Reed."
 
 ustates.51.t:0 "Congress Passes the Trade Union Bill"
-ustates.51.d:0 "Through bribery and thuggery President Long was able to get his bill passed that made any trade union associated with the CSA illegal. Only government authorized trade unions would be allowed in America."
+ustates.51.d:0 "Through bribery and thuggery President Long was able to get his bill passed that made any trade union associated with the CSA illegal. Only government authorised trade unions would be allowed in America."
 ustates.51.a:0 "Excellent!"
 
 ustates.52.t:0 "Reed Defies the Bill"
@@ -1252,7 +1252,7 @@ ustates.181.d:0 "Yesterday pro-democratic politicians like Garner started plotti
 ustates.181.a:0 "Should I worry?"
 
 ustates.182.t:0 "Mac Arthur was killed!"
-ustates.182.d:0 "Today MacArthur has been killed during a visit to a farm belonging to an immigrant from Europe, Boleslaw Gebert. Nobody knows who will take the Presidential seat, since the Consitution was thrown away and there are no succession plans. The country is on the verge of chaos!"
+ustates.182.d:0 "Today MacArthur has been killed during a visit to a farm belonging to an immigrant from Europe, Boleslaw Gebert. Nobody knows who will take the Presidential seat, since the Constitution was thrown away and there are no succession plans. The country is on the verge of chaos!"
 ustates.182.a:0 "Eisenhower wins the struggle for the power!"
 ustates.182.b:0 "Chaos overtakes Washington"
 ustates.182.c:0 "Pro-democratic circles retake Washington!"
@@ -1283,7 +1283,7 @@ ustates.187.b:0 "Patriotic education is enough"
 ustates.187.c:0 "Do nothing"
 
 ustates.188.t:0 "Confiscation of big fortunes"
-ustates.188.d:0 "It is true that many capitalists who are United States citizens hate us. They say that we are destroyers of democracy and we are worse than the Bolsheviks or the Confederacy Nationalists from the deep South. But we are only patriots from officer circles who are keen on restoring the United States's glory, even at the cost of democracy. If we confiscate their fortunes, we will have one less enemy."
+ustates.188.d:0 "It is true that many capitalists who are United States citizens hate us. They say that we are destroyers of democracy and we are worse than the Bolsheviks or the Confederacy Nationalists from the deep South. But we are only patriots from officer circles who are keen on restoring the glory of the United States, even at the cost of democracy. If we confiscate their fortunes, we will have one less enemy."
 ustates.188.a:0 "Confiscate, Rockefellers are enemies of the average Joe"
 ustates.188.b:0 "Don't confiscate, we are not Bolsheviks"
 
