--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -425,6 +425,11 @@ delhi.208.t:0 "Nepali Atrocities in the Ganges-Yamuna Basin"
 delhi.208.d:0 "Horrible news has reached us from the Ganges-Yamuna Basin! Late last night, the celebration of the Hindu festival of Diwali turned violent as hundreds upon hundreds of Indians utilised the gathering to launch spontaneous protests against Nepal’s occupation of rightful Indian soil. A local police commander lost his nerve and ordered his troops to fire upon one of these demonstrations, leaving 50 civilians dead. Tempers are running high throughout the lowlands, reaching revolutionary heights in Dehradun. Our government should be prepared for any eventuality. After all, do we not claim to represent ALL Indians?"
 delhi.208.a:0 "Outrageous!"
 
+delhi.299.t:0 "Victory of the Dominion"
+delhi.299.d:0 "Since the end of the Weltkrieg, the Indian sub-continent has been split into three sides: the loyalist remnants of the British Raj, the socialists of the Indian National Congress, and the reactionary Indian princes who rejected both sides. With the dust having finally settled, the loyalists have proven triumphant and the Dominion of India now rules unopposed over the region, setting itself up to become a preeminent world power once it recovers from the devastation of its civil war."
+delhi.299.a:0 "Jai Hind!"
+delhi.299.b:0 "We welcome the success of our ally"
+delhi.299.c:0 "I see..."
 delhi.300.t:0 "The Fate of Princely India's Officer Corps"
 delhi.300.d:0 "Although defeated in the field, the officer corps of Princely India proved its worth on several occasions against our troops. With Hyderabad occupied and the territories of the former Raj almost unified, these men, true patriots, are longing to resume their service to India. However, a great deal of our loyal commanders fear the consequences of so readily accepting former enemies into the army."
 delhi.300.a:0 "We need all of them to make India mighty once again"
