--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -305,6 +305,11 @@ prf.20.g:0 "Mirza Muhammad Ismail"
 prf.20.h:0 "Nawab Fazal Nawaz Jung Bahadur"
 prf.20.i:0 "Jayachamarajendra Raja Wadiyar V"
 prf.20.j:0 "Krushna Chandra Gajapati"
+prf.21.t:0 "Victory of the Princely Federation"
+prf.21.d:0 "Since the end of the Weltkrieg, the Indian sub-continent has been split into three sides: the loyalist remnants of the British Raj, the socialists of the Indian National Congress, and the reactionary Indian princes who rejected both sides. With the dust having finally settled, the reactionaries have proven triumphant and Osman Ali Khan now rules unopposed over the region as a new and independent monarch, setting his nation up to become a preeminent world power once it recovers from the devastation of the civil war."
+prf.21.a:0 "Jai Hind!"
+prf.21.b:0 "We welcome the success of our ally"
+prf.21.c:0 "I see..."
 prf.100.t:0 "The Council of Princes"
 prf.100.d:0 "Today the Nizam of Hyderabad, Osman Ali Khan, met with the Council of Princes as they presented to him what they believed to be a fair and just package of reforms - namely that the power of the council would be consolidated into a national diwan, elected from among their number, and that this diwan would assume the primary responsibility for restoring rule over the remainder of India. So far it is uncertain whether the Nizam will accept these proposals, or whether he would look on them as an erosion of his own personal authority. There are many, after all, who believe the Nizam himself should act as diwan...and others who say that the position should be subject to national elections, as should the positions on the council itself!"
 prf.100.a:0 "I will consider the advice of the council"
