FNG Localization, tree placement work, JAP event fixes.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -126,6 +126,8 @@ FNG_Reorganize_the_NTC_desc:0 "Founded by the Fengtian Government shortly after 
 #Resume the Wang Yongjiang Reforms Section
 FNG_Resume_the_Wang_Yongjiang_Reforms:0 "Resume the Wang Yongjiang Reforms"
 FNG_Resume_the_Wang_Yongjiang_Reforms_desc:0 "Zhang Zuolin's financial minister for many years, Wang Yongjiang, was almost singlehandedly responsible for the development of Manchuria from a weak borderland into one of China's most prosperous regions. Unfortunately he was taken from us some years ago, but his work and vision live on."
+FNG_Reform_the_Civil_Service_Examination:0 "Reform the Civil Service Examination"
+FNG_Reform_the_Civil_Service_Examination_desc:0 "In use for well over 2,000 years, the Imperial Civil Service Examination saw only minor reform during the later years of the Qing Dynasty, and is now desperately in need of review in order to form a capable and modern civil service for Fengtian."
 FNG_Centralize_the_Banks:0 "Centralise the Banks"
 FNG_Centralize_the_Banks_desc:0 "Fengtian currently features four note-issuing banks, namely the Bank of the Three Eastern Provinces, the Bank of Kirin, the Bank of Heilungkiang and the Frontier Bank, each of which are products of earlier centralisation efforts. Now it seems pertinent to complete this process and unify the banks under a single Central Bank."
 FNG_Re-Introduce_the_Fengtian_Dollar:0 "Re-introduce the Fengtian Dollar"
@@ -138,13 +140,6 @@ FNG_Fill_the_Silver_Reserve:0 "Fill the Silver Reserve"
 FNG_Fill_the_Silver_Reserve_desc:0 "The Fengtian Yuan, our principal currency, is backed by silver and in the past has even gained value against the Japanese Yen. This has been met by Japanese insistence that our reserves have never held enough silver to properly back the currency. Regrettably, there may have been some truth to this, and so more silver must be purchased if we are to attract additional investment."
 FNG_Encourage_Japanese_Investment:0 "Encourage Japanese Investment"
 FNG_Encourage_Japanese_Investment_desc:0 "Unfortunately foreign capital is crucial to our development efforts, and so we must make attempts to attract Japanese alongside Chinese investors. While they won't receive the same incentives as our own citizens, they should be comforted by our recent filling of the silver reserves."
-#Civil Reform Section
-FNG_Reform_the_Civil_Service_Examination:0 "Reform the Civil Service Examination"
-FNG_Reform_the_Civil_Service_Examination_desc:0 "In use for well over 2,000 years, the Imperial Civil Service Examination saw only minor reform during the later years of the Qing Dynasty, and is now desperately in need of review in order to form a capable and modern civil service for Fengtian."
-FNG_Rural_Reconstruction:0 "Rural Reconstruction"
-FNG_Rural_Reconstruction_desc:0 "Disturbed by China's decades of national humiliation, but not moved to the extreme conservatism of the Qing Dynasty or the radicalism of the Kuomintang, the Rural Reconstruction Movement seeks to revive the Chinese village through education, medical aid, and political organisation."
-FNG_Soldier-Farmers:0 "Soldier-Farmers"
-FNG_Soldier-Farmers_desc:0 "Most of China's wars have been fought by peasant farmers, and while standing armies now exist, their manpower detracts from the economic viability of the state. Few families want to send their sons away if it means having no help on the farm during crucial planting and harvesting seasons. Rotating our deployments to match seasonal changes would go a long way toward solving this problem."
 #Political Branch
 FNG_Courting_the_Grand_Marshals_Favour:0 "Courting the Grand Marshal's Favour"
 FNG_Courting_the_Grand_Marshals_Favour_desc:0 "The Fengtian Government consists of several groups competing for the attention and favour of Grand Marshal Zhang Zuolin, around whom most state functions revolve. The Communications Clique and others in the assembly clamour for a constitution, while the generals call for a return to military rule, but Zhang may instead be able to quell the chaos and replace the squabbling factions with his own iron fist."
@@ -220,8 +215,6 @@ FNG_Develop_the_Marshal_Zhang_Rifle_desc:0 "The time has come for we Chinese to 
 FNG_Study_Japanese_Arms_Manufacture:0 "Study Japanese Arms Manufacture"
 FNG_Study_Japanese_Arms_Manufacture_desc:0 "Japan has had an arms industry resembling those in the West for decades, and far outstripping even our own Mukden arsenal. We must learn all they will let us, and more."
 #Japanese Equipment Section
-FNG_The_Hiroshima_Proposal:0 "The Hiroshima Proposal"
-FNG_The_Hiroshima_Proposal_desc:0 "The Imperial Japanese Army has proposed an expansive contract involving transfers of small arms and light vehicles in exchange for rights to additional bases in Heilongjiang province. The transfers would come in three packages."
 FNG_Import_Artillery_from_Kokura:0 "Import Artillery from Kokura"
 FNG_Import_Artillery_from_Kokura_desc:0 "Japan's Kokura Arsenal has a long history of producing quality artillery, and importing these more advanced weapons ought to be much faster and cheaper than building more of our own."
 FNG_Adopt_the_Arisaka_Type_99:0 "Adopt the Arisaka Type 99"
@@ -238,8 +231,8 @@ FNG_Reorganize_the_Coastal_Defence_Forces:0 "Reorganise the Coastal Defence Forc
 FNG_Reorganize_the_Coastal_Defence_Forces_desc:0 "Because the Fengtian Navy has no realistic way of opposing the larger and newer navy fielded by Qing, its main purpose is coastal defence. In light of recent troubling inadequacies, such as one ship's crew selling their armament, extensive reorganisation and reform is necessary."
 FNG_Expand_Yingkou_Naval_Yard:0 "Expand Yingkou Naval Yard"
 FNG_Expand_Yingkou_Naval_Yard_desc:0 "Yingkou is the Northeast Region's second largest port, after Japanese-held Dalian, and the home of our Navy. If we are to begin any meaningful naval reconstruction project, expansion of the Yingkou Naval Yard is an essential first step."
-FNG_The_Zhenwei:0 "The Zhenwei"
-FNG_The_Zhenwei_desc:0 "The Japanese have decided to retire their older Kongo Class battleships, and set aside one for purchase by our Navy. Crewing and maintaining a battleship is no small task, but stand as a symbol of national status and pride. The Grand Marshal has decided to name the ship 'Zhenwei' or 'Suppressing Force'."
+FNG_The_Eight_Points_Strategy:0 "The Eight Points Strategy"
+FNG_The_Eight_Points_Strategy_desc:0 "The severe asymmetry in strength between the Fengtian and Qing navies means that, in the absence of Japanese support, our entire coast will be at risk of invasion. Japanese strategists have outlined eight positions at which naval landings are most likely, and drafted plans for their defence."
 FNG_Regular_River_Patrols:0 "Regular River Patrols"
 FNG_Regular_River_Patrols_desc:0 "The Navy possesses number of small patrol boats, occasionally used to police the Yalu and Songhua rivers, but the majority of which are currently rusting away in storage. These might be better used to train our crews and maintain our internal security, if we can find the funding."
 #Air Force Branch
@@ -247,36 +240,24 @@ FNG_The_China_Flying_Corps:0 "The China Flying Corps"
 FNG_The_China_Flying_Corps_desc:0 "Originally organised by the Grand Marshal's son, Zhang Xueliang, the Corps performed well in the last war, losing air superiority only upon the arrival of more modern German-piloted planes. Since then it's expanded, but retains aircraft decades behind Western standards."
 FNG_Order_New_Aircraft:0 "Order New Aircraft"
 FNG_Order_New_Aircraft_desc:0 "True aircraft design requires well educated and extremely specialised engineers, which we sadly don't have access to. As a result, in order to improve our air force, we must order more from Japan."
-FNG_The_Lavrov_Affair:0 "The Lavrov Affair"
-FNG_The_Lavrov_Affair_desc:0 "Likely as a consequence of the recent chaos engulfing Russia, a shady individual calling himself only 'Lavrov' was arrested along the Russian border, and now offers access to a shipment of Russian planes more modern than our own, provided that we extend diplomatic protection."
 FNG_Reverse_Engineering_Efforts:0 "Reverse Engineering Efforts"
-FNG_Reverse_Engineering_Efforts_desc:0 "With the Russian planes now in our possession, it seems possible that we might reverse engineer them for our own use, though the success of such efforts cannot be guaranteed."
+FNG_Reverse_Engineering_Efforts_desc:0 "With some Russian planes now in our possession, it seems possible that we might reverse engineer them for our own use, though the success of such efforts cannot be guaranteed."
+FNG_Japanese_Instruction:0 "Japanese Instruction"
 FNG_Japanese_Instruction:0 "Japanese Instruction"
 FNG_Japanese_Instruction_desc:0 "Enormous advances in aircraft design over the past two decades have resulted in planes that fly almost completely differently than their predecessors, requiring complete reevaluations of flight manoeuvring and tactics for our new planes. Japanese instructors are the only easy solution to this problem."
 FNG_Expand_the_Mukden_Aerodrome:0 "Expand the Mukden Aerodrome"
 FNG_Expand_the_Mukden_Aerodrome_desc:0 "One of China's first military aviation centres, the Mukden Aerodrome requires expansion in-line with our increasing air power."
-#Defensive Branch
-FNG_Fortress_Manchuria:0 "Fortress Manchuria"
-FNG_Fortress_Manchuria_desc:0 "The Yan Mountains to the South, the Lesser Khigan Range to the West, and the Bohai Gulf to the East create a natural fortress around the Manchurian plain, leaving the pass at Shanhaiguan as the only easy point of entry. Man-made fortification could render Manchuria virtually impenetrable."
-FNG_The_Eight_Points_Strategy:0 "The Eight Points Strategy"
-FNG_The_Eight_Points_Strategy_desc:0 "The severe asymmetry in strength between the Fengtian and Qing navies means that, in the absence of Japanese support, our entire coast will be at risk of invasion. Japanese strategists have outlined eight positions at which naval landings are most likely, and drafted plans for their defence."
-FNG_The_Heihei_Defensive_Complex:0 "The Heihei Defensive Complex"
-FNG_The_Heihei_Defensive_Complex_desc:0 "Unlike its Southern border, Manchuria has few natural defences to the north, leaving it open to repeats of the Russian invasions of 1900 and 1904. Heihei, a town along the Yalu river, is strategically placed to deflect attacks against major cities further south."
-FNG_The_Great_Wall_Defensive_Line:0 "The Great Wall Defensive Line"
-FNG_The_Great_Wall_Defensive_Line_desc:0 "The Great Wall, the legacy of thousands of years of Chinese hegemony, now stands obsolete in an age of artillery, armour, and air power. All the same, its massive ramparts continue to serve as an easy passage across otherwise difficult terrain, permitting rapid defensive deployments. "
-#Foreign Policy Section
+#Irredentism Branch
 FNG_National_Irredentism:0 "National Irredentism"
 FNG_National_Irredentism_desc:0 "The end of the Civil Wars in 1928 saw the foundation of the Fengtian Government, but what would normally have been a moment of celebration in fact represented the exile of the once thriving republican movement to Northeastern China. The South must, and will be, reclaimed!"
-FNG_The_Jehol_Plan:0 "The Jehol Plan"
-FNG_The_Jehol_Plan_desc:0 "The most straightforward and realistic strategy for reclaiming the South involves an assault through the Province of Jehol and across the Yan Mountains to the South. With the pass at Shanhaiguan in German hands, mountain troops must be trained and equipped to lead the charge."
-FNG_The_Nanjing_Plan:0 "The Nanjing Plan"
-FNG_The_Nanjing_Plan_desc:0 "The only other angle of attack lies across the Bohai Gulf, and again with German concessions limiting our options, the most realistic target for landing is the Yangtze River Delta near Nanjing. Such an invasion will rely on marines, and Japanese naval support."
+FNG_The_Yanshan_Plan:0 "The Yanshan Plan"
+FNG_The_Yanshan_Plan_desc:0 "The most straightforward and realistic strategy for reclaiming the South involves an assault through the Province of Jehol and across the Yan Mountains to the South. With the pass at Shanhaiguan so narrow, mountain troops must be trained and equipped to widen the front."
+FNG_Fortress_Manchuria:0 "Fortress Manchuria"
+FNG_Fortress_Manchuria_desc:0 "The Yan Mountains to the South, the Lesser Khigan Range to the West, and the Bohai Gulf to the East create a natural fortress around the Manchurian plain, leaving the Shanhai Pass as the only easy point of entry. Man-made fortification could render Manchuria virtually impenetrable."
 FNG_Wu_Wang_Zai_Ju:0 "Wu Wang Zai Ju"
 FNG_Wu_Wang_Zai_Ju_desc:0 "The ancient Chinese idiom 'Forget not what happened in Ju' alludes to the desperate defence of Ju, the state of Qi's final city, which lead it to reconquer all of its lost territory. Manchuria shall be our Ju, from which we will reconquer all of China!"
 FNG_Jehol_Border_Exercises:0 "Jehol Border Exercises"
 FNG_Jehol_Border_Exercises_desc:0 "Border exercises not only reinforce discipline and training, but also serve to give our troops an intimate knowledge of the land they may soon fight in. As a result, if we are pushed onto the defensive, they can more effectively execute tactics, and call in fire support with extreme precision, as they know the lay of the land."
-FNG_The_Doihara_Arrangement:0 "The Doihara Arrangement"
-FNG_The_Doihara_Arrangement_desc:0 "A Japanese colonel by the name of Doihara has come to us proposing the smuggling of opium as a means of spreading corruption in the Qing Empire, and weakening its soldiers' will to fight. Jehol and Kirin already host poppy farms, but if discovered this strategy could invite serious criticism."
 FNG_Golden_Dragon_Cigarettes:0 "Golden Dragon Cigarettes"
 FNG_Golden_Dragon_Cigarettes_desc:0 "A variant of the already popular 'Golden Bat' cigarette, the Golden Dragon Cigarette could serve as an effective means of spreading addiction through the infusion of trace amounts of opium. All Doihara needs us to do is make the call."
 FNG_Shanhaiguan_Infiltration:0 "Shanhaiguan Infiltration"
@@ -288,7 +269,7 @@ FNG_The_Grand_Marshals_Proclamation_desc:0 "The Grand Marshal will, in a grand p
 FNG_Begin_the_War_of_National_Reclamation:0 "Begin the War of National Reclamation"
 FNG_Begin_the_War_of_National_Reclamation_desc:0 "The moment has come, after so long spent growing our strength and biding our time, to declare the start of the War of National Reclamation! Ten thousand years to the Republic! Ten thousand years to the Grand Marshal! Onward for China!"
 FNG_Strike_Mongolia:0 "Strike Mongolia"
-FNG_Strike_Mongolia_desc:0 "In the closing months of the Civil Wars, the Mad Baron of Mongolia unjustly seized rightful Chinese lands. Surely his people must know, deep in their hearts, that Mongolia is and has always been an indivisible part of China. We must return these lands to the Chinese people, and strike out in vengeance as we do so."
+FNG_Strike_Mongolia_desc:0 "In the closing months of the last civil war, the Mad Baron of Mongolia unjustly seized Chahar, our rightful land. We would endeavour to retake it, but von-Sternberg seems unlikely to fight a limited war, and our interests lie to the south. Perhaps we can find an opportune moment to strike."
 
 ### Events ###
 fengtian.6.t:0 "Japan seeks to negotiate"
