--- a/localisation/KR_AustriaFoci_l_english.yml
+++ b/localisation/KR_AustriaFoci_l_english.yml
@@ -1,6 +1,17 @@
 ﻿l_english:
 
 ### These are placeholder localisations ###
+aus.700.t:0 "Kaiser Otto declares the Restauration of Dualism"
+aus.700.d:0 "To appease the Magyars, bla bla, go back to like before the Weltkrieg."
+aus.700.a:0 "For Austria-Hungary!"
+
+aus.800.t:0 "Kaiser Otto declares the End of the Ausgleich"
+aus.800.d:0 "The Magyars have held a far too important role within the Empire for too long. They've underminded the principle of a United Austria."
+aus.800.a:0 "For the Austrian Empire!"
+
+aus.900.t:0 "Kaiser Otto declares the Embracement"
+aus.900.d:0 "Bohemia's been a part of Austria since a long time ago. We shall demand them to be again now."
+aus.900.a:0 "Send our demands."
 
 aus.7000.t:0 "The Crown of Bohemia"
 aus.7000.d:0 "Bohemia's been a part of Austria since a long time ago. We shall demand them to be again now."
