Rewrote some descriptions + spelling fixes

--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -2,30 +2,30 @@
 
 ### Stability ###
 disaster:0 "Disaster"
-disaster_desc:0 "You'll eventually end up in a disaster if you let your political power go under §Y-500§! and you'll have to pass above this number to go up to very low stability again."
+disaster_desc:0 "You'll end up in a disaster if you let your political power go under §Y-500§!, you'll have to pass above §Y-500§! to go up to very low stability."
 very_low_stability:0 "Very Low Stability"
-very_low_stability_desc:0 "You'll eventually end up at very low stability if you let your political power go under §Y-250§! and you'll have to pass above this number to go up to low stability again."
+very_low_stability_desc:0 "You'll end up at very low stability if you let your political power go under §Y-250§!, you'll have to pass above §Y-250§! to go up to low stability."
 low_stability:0 "Low Stability"
-low_stability_desc:0 "You'll eventually end up at low stability if you let your political power go under §Y-50§! and you'll have to pass above this number to go up to average stability again."
+low_stability_desc:0 "You'll end up at low stability if you let your political power go under §Y-50§!, you'll have to pass above §Y-50§! to go up to average stability."
 normal_stability:0 "Average Stability"
-normal_stability_desc:0 "The standard level of stability."
+normal_stability_desc:0 "The basic level of stability."
 good_stability:0 "Good Stability"
-good_stability_desc:0 "You'll eventually get an event asking you if you want to go up to good stability if your political power is above §Y+150§! and you'll go down to average stability again if you let your political power go under §Y0§!."
+good_stability_desc:0 "If your political power is above §Y150§! you will be able to go up to Good Stability. You'll go down to average stability if you let your political power go under §Y0§!."
 very_good_stability:0 "Very Good Stability"
-very_good_stability_desc:0 "You'll eventually get an event asking you if you want to go up to very good stability if your political power is above §Y+150§! and you'll go down to good stability again if you let your political power go under §Y0§!."
+very_good_stability_desc:0 "If your political power is above §Y150§! and you are at Good Stability you will be able to go up to Very Good Stability. You'll go straight down to average stability if you let your political power go under §Y0§!."
 stability:0 "Stability"
 
-### Party Popularity ###
-very_low_popularity:0 "Very Low Party Popularity"
-very_low_popularity_desc:0 "You'll get this if your party is under 20% popularity."
-low_popularity:0 "Low Party Popularity"
-low_popularity_desc:0 "You'll get this if your party is between 20% and 40% popularity."
-normal_popularity:0 "Medium Party Popularity"
-normal_popularity_desc:0 "You'll get this if your party is between 40% and 60% popularity."
-high_popularity:0 "High Party Popularity"
-high_popularity_desc:0 "You'll get this if your party is between 60% and 80% popularity."
-very_high_popularity:0 "Very High Party Popularity"
-very_high_popularity_desc:0 "You'll get this if your party is above 80% popularity."
+### Popularity ###
+very_low_popularity:0 "Very Low Popularity"
+very_low_popularity_desc:0 "You'll be at Very Low Popularity if your ruling party is under §Y20%§! popularity."
+low_popularity:0 "Low Popularity"
+low_popularity_desc:0 "You'll be at Low Popularity if your ruling party is between §Y20%§! and §Y40%§! popularity."
+normal_popularity:0 "Medium Popularity"
+normal_popularity_desc:0 "You'll be at Medium Popularity if your ruling party is between §Y40%§! and §Y60%§! popularity."
+high_popularity:0 "High Popularity"
+high_popularity_desc:0 "You'll be at High Popularity if your ruling party is between §Y60%§! and §Y80%§! popularity."
+very_high_popularity:0 "Very High Popularity"
+very_high_popularity_desc:0 "You'll be at Very High Popularity if your ruling party is above §Y80%§! popularity."
 popularity:0 "Popularity"
 
 ### Economic Health ###
