Minor India map edits

--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -372,6 +372,7 @@ VICTORY_POINTS_7274:0 "Novosibirsk"
 VICTORY_POINTS_7302:0 "Suva"
 VICTORY_POINTS_7315:0 "Seattle"
 VICTORY_POINTS_7329:0 "Kota Bharu"
+VICTORY_POINTS_7340:0 "Yannam"
 VICTORY_POINTS_7342:0 "Penang" #Penang
 VICTORY_POINTS_7344:0 "Colombo"
 VICTORY_POINTS_7361:0 "Halifax"
@@ -514,6 +515,7 @@ VICTORY_POINTS_10074:0 "Palermo"
 VICTORY_POINTS_10088:0 "Cuttack"
 VICTORY_POINTS_10106:0 "Musul"
 VICTORY_POINTS_10125:0 "Nagoya"
+VICTORY_POINTS_10149:0 "Pondicherry"
 VICTORY_POINTS_10156:0 "Mambang" #Satun
 VICTORY_POINTS_10177:0 "Phra Tabong" #Battambang
 VICTORY_POINTS_10199:0 "Sandakan"
@@ -533,6 +535,7 @@ VICTORY_POINTS_10367:0 "Attu Island"
 VICTORY_POINTS_10370:0 "Springfield"
 VICTORY_POINTS_10386:0 "Sagaing"
 VICTORY_POINTS_10400:0 "Pretoria"
+VICTORY_POINTS_10401:0 "Raipur"
 VICTORY_POINTS_10404:0 "Guilin"
 VICTORY_POINTS_10411:0 "Nakhon Sawan"
 VICTORY_POINTS_10413:0 "Jinghong"
@@ -687,12 +690,12 @@ VICTORY_POINTS_12766:0 "Asmara"
 VICTORY_POINTS_12782:0 "San Antonio"
 VICTORY_POINTS_12790:0 "Cartagena"
 VICTORY_POINTS_12798:0 "Quito"
+VICTORY_POINTS_12799:0 "Jubbalpur"
 VICTORY_POINTS_12806:0 "Khartoum"
 VICTORY_POINTS_12810:0 "Veracruz"
 VICTORY_POINTS_12823:0 "San Salvador"
 VICTORY_POINTS_12835:0 "Monterrey"
 VICTORY_POINTS_12853:0 "Belém"
-VICTORY_POINTS_12854:0 "Jubbalpur"
 VICTORY_POINTS_12883:0 "Jeddah"
 VICTORY_POINTS_12885:0 "Cayenne"
 VICTORY_POINTS_12891:0 "Bissau"
